--- a/cliente/src/app/productos/producto-list/producto-list.component.html
+++ b/cliente/src/app/productos/producto-list/producto-list.component.html
@@ -1,3 +1,6 @@
-<p>
-  producto-list works!
-</p>
+<h1>LISTA</h1>
+<ul>
+  <li *ngFor="let prod of listaProductos">
+    {{prod.id}} -{{prod.nombre}} -{{prod.precio}} -{{prod.stock}} 
+  </li>
+</ul>
